# agent-99

./: .gitignore  CLAUDE.md  README.md  install.py  pyproject.toml  start.py
.github/workflows/: ci.yml
agent99/: __init__.py  cli.py  config.py  loop.py  memory.py  providers.py  registry.py
agents/: example.yaml
api/: __init__.py  agents_api.py  app_config.py  async_loop.py  auth.py  calendar_auth.py  gmail_auth.py  main.py  runs.py  scheduler.py  scheduler_logic.py  schedules.py  schedules_db.py
docs/plans/: 2026-03-23-api-base.md  2026-03-23-cli.md  2026-03-23-loop.md  2026-03-23-memory.md  2026-03-23-providers.md  2026-03-23-registry.md  2026-03-23-scaffold-and-config.md  2026-03-23-web-ui.md  2026-03-23-wire-memory.md
tests/: conftest.py  test_api_agents.py  test_api_auth.py  test_api_schedules.py  test_app_config.py  test_cli.py  test_config.py  test_loop.py  test_memory.py  test_providers.py  test_registry.py  test_scheduler.py  test_scheduler_logic.py  test_schedules_db.py  test_tools_files.py  test_tools_filesystem.py  test_tools_search.py
tools/: __init__.py  calendar.py  files.py  filesystem.py  gmail.py  images.py  search.py
web/: middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/agents/: page.tsx
web/app/agents/[name]/: page.tsx
web/app/agents/[name]/edit/: page.tsx
web/app/agents/new/: page.tsx
web/app/login/: page.tsx
web/app/runs/: page.tsx
web/app/runs/[id]/: page.tsx
web/app/schedules/: page.tsx
web/app/settings/: page.tsx
web/components/: ActiveRunsBar.tsx  AgentForm.tsx  NavBar.tsx  RunList.tsx  ScheduleForm.tsx  StreamingOutput.tsx
web/lib/: api.ts  types.ts
