[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-99"
version = "0.1.0"
description = "A lightweight local AI agent runner"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "litellm",
    "typer",
]

[project.scripts]
agent99 = "agent99.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agent99"]

[tool.pytest.ini_options]
testpaths = ["tests"]
