[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-99"
version = "0.1.0"
description = "A lightweight local AI agent runner"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "litellm",
    "typer",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]",
    "bcrypt",
    "python-jose[cryptography]",
    "python-multipart",
    "sse-starlette",
    "aiofiles",
    "cryptography",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]

[project.scripts]
agent99 = "agent99.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agent99", "api", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
