[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-99"
version = "0.1.0"
description = "A lightweight local AI agent runner"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "litellm",
    "typer",
    "requests",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]",
    "bcrypt",
    "python-jose[cryptography]",
    "python-multipart",
    "sse-starlette",
    "aiofiles",
    "cryptography",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
agent99 = "agent99.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agent99", "api", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
exclude = ["web/", "tests/"]
